[package]
name = "vrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
uuid = { version = "1.10.0", features = [
    "v4",
    "serde",
], default-features = false }
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12.7", features = ["json", "stream"] }
mime = "0.3.17"
bytes = "1.7.1"
mime_guess = "2.0.5"
yt-dlp = { version = "1.3.4" }
async-trait = "0.1.89"
fs2 = "0.4.3"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.10.1"
